# cpong

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: globals.h  input.h  objects.h  render.h  window.h
src/: input.c  main.c  objects.c  render.c  window.c
